# rust-cli-template

./: .gitignore  Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: error.rs  main.rs
crates/cli/src/cli/: cmd.rs  executor.rs  mod.rs
crates/cli/src/handlers/: mod.rs  search.rs
crates/cli/tests/: cli_search.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  model.rs  render.rs  search.rs
docs/plans/: 2026-02-19-rust-cli-template.md
