[workspace]
members = ["crates/core", "crates/cli"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
clap = { version = "4.5.1", features = ["derive"] }
regex = "1.10.3"
owo-colors = "4.0.0"
derive_more = { version = "2.1.1", features = ["full"] }
